@@ -1,6 +1,7 @@
-Changes in QMPlay2 build 16.06.08:
+Changes in QMPlay2 build 16.06.11:
 	- fixed color in graphics subtitles (e.g. dvdsub),
 	- hide mouse cursor when cover image is visible,
+	- updated Russian translation (victorr2007),
 	- show more information to the user,
 	- bugfix,
 
